<resources>
    <string name="app_name">Medi-App</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="or_divider">or</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="remember_me_label">Remember me</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up_if_no_account">Don\'t have an account? Sign up.</string>
    <string name="sign_with_google">Sign with Google</string>
    <string name="sign_with_fb">Sign with Facebook</string>
    <string name="sign_up">Create an account</string>
    <string name="confirm_email">Confirm email</string>
    <string name="register_form_page2_title">Your details</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="password_too_short">Password must be at least 6 characters.</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="next">Next</string>
    <string name="generic_error">Something went wrong.</string>
    <string name="email_exists">Email already in use.</string>
    <string name="passwords_not_equal">Passwords must match.</string>
    <string name="email_required">Email is required.</string>
    <string name="emails_not_equal">Emails must match.</string>
    <string name="required_field">This field is required.</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="reset_password">Reset password</string>
    <string name="finish">Finish</string>
    <string name="dashboard">Dashboard</string>
    <string name="diabetes">Diabetes</string>
    <string name="heart">Heart</string>
    <string name="alzheimers">Alzheimer\'s</string>
    <string name="logout">Logout</string>
    <string name="pregnancies_hint">Number of pregnancies</string>
    <string name="glucose_hint">Glucose levels</string>
    <string name="blood_pressure_hint">Blood pressure levels</string>
    <string name="skin_thickness_hint">Skin thickness</string>
    <string name="bmi_hint">BMI (Body Mass Index)</string>
    <string name="insulin_hint">Insulin levels</string>
    <string name="save">Save</string>
    <string name="left_hand_hint">Left</string>
    <string name="right_hand_hint">Right</string>
    <string name="education_level_hint">Education</string>
    <string name="socio_status_hint">Socioeconomic status</string>
    <string name="mini_mental_hint">Mini Mental State Examination</string>
    <string name="dementia_hint">Clinical Dementia Rating</string>
    <string name="est_total_intra_volume_hint">Estimated Total Intracranial Volume</string>
    <string name="normalize_whole_brain_hint">Normalize Whole Brain</string>
    <string name="dominant_hand_hint">Dominant hand</string>
    <string name="edu_less_than_hs">Below high school</string>
    <string name="edu_hs_grad">High school graduate</string>
    <string name="edu_some_college">Went to college</string>
    <string name="edu_college_grad">College graduate</string>
    <string name="edu_beyond_college">Post-graduate education</string>
    <string name="socio_status_1">Socioeconomic status 1</string>
    <string name="socio_status_2">Socioeconomic status 2</string>
    <string name="socio_status_3">Socioeconomic status 3</string>
    <string name="socio_status_4">Socioeconomic status 4</string>
    <string name="serum_chol_hint">Serum Cholesterol</string>
    <string name="resting_bp_hint">Resting Blood Pressure</string>
    <string name="max_hr_hint">Maximum Heart Rate</string>
    <string name="yes_hint">Yes</string>
    <string name="no_hint">No</string>
    <string name="exercise_angina_hint">Exercise induced angina</string>
    <string name="resting_ecg_hint">Resting ECG</string>
    <string name="fasting_bs_hint">Fasting Blood Sugar</string>
    <string name="ecg_normal">Normal</string>
    <string name="ecg_stt_abnormal">ST-T wave abnormality</string>
    <string name="ecg_left_vent_hypertrophy">Left ventricular hypertrophy</string>
    <string name="st_depression_hint">ST depression - Exercise to rest ratio</string>
    <string name="chest_pain_hint">Chest pain type</string>
    <string name="peak_st_segment_hint">Peak exercise ST segment</string>
    <string name="upsloping_st_hint">Upsloping</string>
    <string name="flat_st_hint">Flat</string>
    <string name="downsloping_st_hint">Downsloping</string>
    <string name="major_vessels_hint">Major vessels colored by fluoroscopy</string>
    <string name="thalassemia_hint">Thalassemia</string>
    <string name="thalassemia_normal_hint">Normal</string>
    <string name="thalassemia_fixed_hint">Fixed defect</string>
    <string name="thalassemia_reversible_hint">Reversible</string>
    <string name="chest_pain_typical_hint">Typical</string>
    <string name="chest_pain_atypical_hint">Atypical</string>
    <string name="chest_pain_nonanginal">Other</string>
    <string name="chest_pain_asymptotic_hint">Asymptotic</string>
    <string name="gp_avatar_desc">General practitioner Picture</string>
    <string name="gp_name_string">%1$s %2$s</string>
    <string name="cancel">Cancel</string>
    <string name="forms">Forms</string>
    <string name="profile">Profile</string>
    <string name="predictions">Predictions</string>
    <string name="saved_success">Saved!</string>
    <string name="insurance_company_logo">Insurance company logo</string>
    <string name="predict_heart_disease">Predict heart disease</string>
    <string name="predict_alzheimers">Predict Alzheimer\'s</string>
    <string name="predict_diabetes">Predict diabetes</string>
    <string name="get_prediction">Tap to get a prediction</string>
    <string name="prediction_healthy">Healthy</string>
    <string name="prediction_warning">Warning</string>
    <string name="prediction_serious">Serious problem</string>
    <string name="prediction_history">Predictions History</string>
    <string name="prediction_last_form_info">Predicting using your latest health data</string>
    <string name="select_insurance_company">Switch your insurer</string>
    <string name="select_insurance_company_if_not_chosen">Choose your insurer</string>
    <string name="select_gp">Switch your GP</string>
    <string name="select_gp_if_not_chosen">Choose your GP</string>
    <string name="health_forms">Medical Forms</string>
    <string name="heart_cont">Heart Cont.</string>
    <string name="medical_history">Medical History</string>
    <string name="overall_health_good">Good</string>
    <string name="overall_health_very_good">Very good</string>
    <string name="overall_health_bad">Worrying</string>
    <string name="overall_health_very_bad">Serious problems</string>
    <string name="overall_health_no_score">Could not calculate your health score</string>
    <string name="your_profile">Profile</string>
    <string name="overall_health_score">Your health score</string>
    <string name="feedback">Give us feedback</string>
    <string name="add_funds">Top Up Medi-Coin</string>
    <string name="change_password">Change password</string>
    <string name="name_string">%s %s</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="change_gp">Switch General Practitioner</string>
    <string name="insurance_company_desc">Insurance Company Logo</string>
    <string name="latest_prediction">Latest prediction:</string>
    <string name="latest_form_entry">Latest form entry: </string>
    <string name="confirm_action">Confirm action</string>
    <string name="proceed_question">Do you want to proceed?</string>
    <string name="continue_text">Continue</string>
    <string name="your_gp">Your General Practitioner</string>
    <string name="your_insurance_company">Your insurance company</string>
    <string name="your_message_hint">Your message</string>
    <string name="your_feedback_optional">Your feedback (optional)</string>
    <string name="message_your_gp">Message your GP</string>
    <string name="send_message">Send message</string>
    <string name="message_empty">Message cannot be empty</string>
    <string name="message_your_insurance_company">Message your insurance company</string>
    <string name="pick_gp">You have not chosen your GP yet</string>
    <string name="pick_insurance_company">You have not chosen your insurance company yet</string>
    <string name="message_sent">Message sent!</string>
    <string name="send">Send</string>
    <string name="rating">Rating</string>
    <string name="thanks_for_feedback">Thank you for your feedback!</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="change_insurance_company">Switch insurance company</string>
    <string name="unlink_gp">Unlink your GP</string>
    <string name="unlink_insurance_company">Unlink your insurance company</string>
    <string name="reset_email_sent">Email containing password reset link has been sent!</string>
    <string name="pedigree_func_hint">Diabetes pedigree function</string>
    <string name="signed_in_as">Signed in as:</string>
    <string name="current_password_hint">Current password</string>
    <string name="new_password_hint">New password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="coins_balance">Your coins</string>
    <string name="your_mediapp_wallet">Your Mediapp wallet</string>
    <string name="get_insurance">Get insurance</string>
    <string name="buy_with_price">%.2f + Ether fee</string>
    <string name="buy_policy">Buy a policy</string>
    <string name="length">"Length: "</string>
    <string name="buy">Buy</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="confirm_payment_message">Are you sure you want to buy this insurance policy?</string>
    <string name="processing">Processing…</string>
    <string name="payment_success">Payment successful</string>
    <string name="balance_too_low">Your wallet balance is too low</string>
    <string name="no_wallet">No wallet found</string>
    <plurals name="months_plural">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

    <string-array name="sexes">
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>

    <string-array name="education_items">
        <item>@string/edu_less_than_hs</item>
        <item>@string/edu_hs_grad</item>
        <item>@string/edu_some_college</item>
        <item>@string/edu_college_grad</item>
        <item>@string/edu_beyond_college</item>
    </string-array>

    <string-array name="socioeconomic_items">
        <item>@string/socio_status_1</item>
        <item>@string/socio_status_2</item>
        <item>@string/socio_status_3</item>
        <item>@string/socio_status_4</item>
    </string-array>

    <string-array name="resting_ecg_items">
        <item>@string/ecg_normal</item>
        <item>@string/ecg_stt_abnormal</item>
        <item>@string/ecg_left_vent_hypertrophy</item>
    </string-array>
</resources>